<resources>
    <!--    Firestore database keys-->
    <string name="fr.users">users</string>
    <string name="fr.users.name">name</string>
    <string name="fr.users.imageUrl">imageUrl</string>
    <string name="fr.users.thumbUrl">thumbUrl</string>
    <string name="fr.users.uid">uid</string>
    <string name="fr.users.deviceToken">deviceToken</string>
    <string name="fr.users.status">status</string>
    <string name="fr.users.lastOnline">lastOnline</string>
    <string name="fr.users.onlineStatus">onlineStatus</string>

    <!--    Realtime database keys-->
    <string name="db.chats">chats</string>
    <string name="db.chats.count">count</string>
    <string name="db.chats.from">from</string>
    <string name="db.chats.imageUrl">imageUrl</string>
    <string name="db.chats.message">message</string>
    <string name="db.chats.time">time</string>
    <string name="db.chats.name">name</string>

    <string name="db.messages">messages</string>
    <string name="db.messages.liked">liked</string>
    <string name="db.messages.content">content</string>
    <string name="db.messages.messageId">messageId</string>
    <string name="db.messages.senderId">senderId</string>
    <string name="db.messages.status">status</string>
    <string name="db.messages.type">type</string>
    <string name="db.messages.sentAt">sentAt</string>

    <!--    Storage keys-->
    <string name="st.profile_photos">profile_photos</string>


    <string name="app_name">Chatter</string>
    <string name="phoneNumberHint">+91XXXXXXXXXX</string>
    <string name="resetBtnText">Reset</string>
    <string name="sendOtpButtonText">Send OTP</string>
    <string name="enterOtpHint">Enter the OTP sent via SMS</string>
    <string name="verifyButtonText">Verify</string>
    <string name="add_profile_picture_button_text">Add profile picture</string>
    <string name="username_hint_text">Username</string>
    <string name="status_hint_text">Status</string>
    <string name="default_status">Hi! I am on Chatter</string>
    <string name="skip_button_text">Skip</string>
    <string name="continue_button_text">Continue</string>
    <string name="change_profile_button_text">Change</string>
    <string name="delete_profile_pic">Delete profile pic</string>
    <string name="groups">Groups</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello CONTACTS fragment</string>
</resources>