<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flButtons"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserPhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_default_profile"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/btnDelete"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintStart_toEndOf="@id/ivUserPhoto"
            android:layout_marginTop="110dp"
            app:layout_constraintBottom_toTopOf="@id/btnProfilePic"
            android:backgroundTint="?attr/colorPrimary"
            app:tint="@color/black"
            android:contentDescription="@string/delete_profile_pic" />

        <Button
            android:id="@+id/btnProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_picture_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUserPhoto"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnProfilePic"
            android:layout_marginTop="50dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint_text"
                android:inputType="textCapWords"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsername"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status_hint_text"
                android:inputType="textCapWords"
                android:textSize="18sp"
                android:text="@string/default_status"/>
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/flButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/skip_button_text"
            android:id="@+id/btnSkip"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/continue_button_text"
            android:id="@+id/btnContinue"/>

    </FrameLayout>

    <ProgressBar
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/progressBar"
        />


</androidx.constraintlayout.widget.ConstraintLayout>